# auto-oscp-recon-notes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
auto_oscp_recon_notes/: __init__.py  cli.py  models.py  report.py
auto_oscp_recon_notes/notes/: __init__.py  templates.py  workspace.py
auto_oscp_recon_notes/parsers/: __init__.py  nmap_xml.py
docs/: sample-report.txt  screenshots.txt
examples/sample-target/expected-output/bluebox/: README.txt  report.txt
examples/sample-target/expected-output/bluebox/checklists/: enum-checklist.txt  http-checklist.txt  smb-checklist.txt  ssh-checklist.txt
examples/sample-target/expected-output/bluebox/notes/: credentials.txt  findings.txt  lessons-learned.txt  services.txt  web.txt
examples/sample-target/expected-output/bluebox/recon/: nmap-summary.txt  services.json
examples/sample-target/scans/: nmap-basic.xml
tests/: conftest.py  smoke_check.py  test_cli.py  test_models.py  test_nmap_parser.py  test_report.py  test_templates.py  test_workspace.py
