[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-oscp-recon-notes"
version = "0.1.0"
description = "Local note-generation tool that organizes authorized lab reconnaissance output into clean plain-text notes, checklists, and report templates."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jun Han" }]
keywords = ["oscp", "recon", "nmap", "cli", "notes", "pentest-prep"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
oscp-notes = "auto_oscp_recon_notes.cli:main"

[project.urls]
Homepage = "https://github.com/Hanzxc/auto-oscp-recon-notes"
Repository = "https://github.com/Hanzxc/auto-oscp-recon-notes"

[tool.setuptools.packages.find]
include = ["auto_oscp_recon_notes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
